Hack vertical filler in the margin to ensure the cloudtag is visible

--- a/base/static/css/michaux.css
+++ b/base/static/css/michaux.css
@@ -38,6 +38,10 @@ body {
     overflow: auto;
 }
 
+#filler {
+    height: 50px;
+}
+
 /* navbar */
 
 ul.navbar {
